[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Interactive/Interactive.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Interactive/Switch.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Switch (6).wav" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[node name="Switch" groups=["Switch"] instance=ExtResource( 1 )]
collision_layer = 4
monitorable = true
script = ExtResource( 2 )

[node name="MeshInstance" parent="." index="2"]
material_override = SubResource( 1 )

[node name="SFX" type="AudioStreamPlayer3D" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01332, 0 )
stream = ExtResource( 3 )
unit_db = 7.878
bus = "SFX"

[node name="CheckPos" type="Position3D" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.601667, 0 )

[connection signal="player_interacted" from="." to="." method="_on_Switch_player_interacted"]
